force-app/main/default/objects/Infection_status__c/Infection_status__c.object-meta.xml
<CustomObject>
    <description>Corona infection status of a specific country</description>
    <label>Infection status</label>
    <nameField>
        <label>Infection status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Infection statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>