force-app/main/default/objects/Infection_status__c/fields/Cases__c.field-meta.xml
<CustomField>
    <fullName>Cases__c</fullName>
    <description>Reported infections</description>
    <inlineHelpText>Reported infections</inlineHelpText>
    <label>Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>