force-app/main/default/objects/Infection_status__c/fields/Cases_today__c.field-meta.xml
<CustomField>
    <fullName>Cases_today__c</fullName>
    <description>New reported infections today</description>
    <inlineHelpText>New reported infections today</inlineHelpText>
    <label>Cases today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>