force-app/main/default/objects/Infection_status__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country name</description>
    <externalId>true</externalId>
    <inlineHelpText>Country name</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>