force-app/main/default/objects/Infection_status__c/fields/Critical__c.field-meta.xml
<CustomField>
    <fullName>Critical__c</fullName>
    <description>Number of still critical infections</description>
    <inlineHelpText>Number of still critical infections</inlineHelpText>
    <label>Critical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>