force-app/main/default/objects/Infection_status__c/fields/Deaths__c.field-meta.xml
<CustomField>
    <fullName>Deaths__c</fullName>
    <description>Reported deaths</description>
    <inlineHelpText>Reported deaths</inlineHelpText>
    <label>Deaths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>