force-app/main/default/objects/Infection_status__c/fields/Deaths_today__c.field-meta.xml
<CustomField>
    <fullName>Deaths_today__c</fullName>
    <description>Newly reported deaths today</description>
    <inlineHelpText>Newly reported deaths today</inlineHelpText>
    <label>Deaths today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>