force-app/main/default/objects/Infection_status__c/fields/Lat__c.field-meta.xml
<CustomField>
    <fullName>Lat__c</fullName>
    <description>Number of still critical infections</description>
    <inlineHelpText>Number of still critical infections</inlineHelpText>
    <label>Lat</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>