force-app/main/default/objects/Infection_status__c/fields/Lon__c.field-meta.xml
<CustomField>
    <fullName>Lon__c</fullName>
    <description>Newly reported deaths today</description>
    <inlineHelpText>Newly reported deaths today</inlineHelpText>
    <label>Lon</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>