force-app/main/default/objects/Infection_status__c/fields/Recovered__c.field-meta.xml
<CustomField>
    <fullName>Recovered__c</fullName>
    <description>Number of recovered infections</description>
    <inlineHelpText>Number of recovered infections</inlineHelpText>
    <label>Recovered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>