force-app/main/default/objects/Infection_status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Cases__c</columns>
    <columns>Deaths__c</columns>
    <columns>Recovered__c</columns>
    <columns>Critical__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>